Upgrade to OpenRewrite 7.18.2 (wip)